# AERIS_SLAM

./: .gitignore  README.md
ARUDINO CODES/ddsm_example-main/: README.md
ARUDINO CODES/gripper_2dof/: gripper_2dof.ino
ARUDINO CODES/lidar_gripper/: lidar_gripper.ino
ARUDINO CODES/llidar2d_gripper/: llidar2d_gripper.ino
robot1_ws/src/Autonomous-Explorer-and-Mapper-ros2-nav2-main/: setup.py
robot1_ws/src/robot_bringup/: setup.py
robot1_ws/src/serial_odom/: package.xml  setup.py
robot2_ws/src/robot_bringup/: package.xml  setup.py
robot2_ws/src/robot_bringup/config/: nav2_params_mod.yaml  raspi_dds_router.yaml
robot2_ws/src/robot_bringup/launch/: bringup_robot1_adv2.launch.py  raspi_bringup.launch.py  robot.launch.py  robot2.launch.py  teleop.launch.py
robot2_ws/src/robot_bringup/robot_bringup/: 3d_pcl_visualizer.py  3d_pcl_visualizer2.py  3d_pcl_visualizer3.py  BottlePCLLocator.py  footprint_marker.py  footprint_marker2.py  fusion_pcl_yolo.py  gripper_lidar_control.py  joy_to_gripper.py  laser_to_pcl.py  lidar3d_processed.py  mrg_relay_node.py  obj_detection_pcl.py  object_detect2.py  object_detect_final.py  static_tf.py  yolo.py
robot2_ws/src/robot_bringup/robot_bringup/testing/: approach_object.py  auto_grip_node.py  box_detect.py  fusion_approach.py  object_detect.py  object_detect2.py  scan_approach_object.py  yolo_pcl_fusion.py  yolo_pcl_fusion2.py  yolo_pcl_fusion3.py
robot2_ws/src/serial_odom/: setup.cfg  setup.py
slam1_ws/src/Autonomous-Explorer-and-Mapper-ros2-nav2/: README.md  package.xml  setup.py
(+101 files in other folders)
